--- a/asst06.adoc
+++ b/asst06.adoc
@@ -1,6 +1,6 @@
 include::header.adoc[]
 
-:title: Assignment 5: Can't spell functions without fun
+:title: Assignment 6: Minesweeper
 :Author Initials: ASN
 :Date:    2020-02-07
 :Revision: 0.1
@@ -11,208 +11,124 @@ include::header.adoc[]
 
 The goals of this assignment are:
 
-* Write programs containing multiple functions
+* Design and implement programs containing multiple functions
+* Apply top-down design principles to building a larger program
 * Work with loops, conditionals, and variables
-
-:stem: latexmath
 
 = Minesweeper
 
-Write a program, `Minesweeper.java`, that implements the game of 
-link:https://minesweeper.online[minesweeper]. 
+image:https://minesweeper.online/img/homepage/beginner.png[minesweeper,width=400px]
 
-In this game, players alternate between placing their symbol (either an "X" or an "O")
-inside a 3x3 grid of squares. The first player to get "3 in a row" (either on a
-row, a column, or diagonally) wins.
+In link:https://minesweeper.online[minesweeper], players try to uncover each cell of a NxM grid
+without hitting any bombs. N represents the number of rows in the grid and 
+M represents the number of columns.
 
-In our version, the user will play against the computer (the Artificial Intelligence, or "AI").
-The AI will always play first and use the symbol "O", and the user will play second with a
-symbol "X". The game can end with the user winning, the AI winning, or a draw.
+When the game starts, the program will generate a board and show it to the user
+with all cells hidden. When the user selects a cell, the game will reveal the
+contents of the cell. If the cell has bombs in any of the 8 adjacent cells, the 
+cell will show a count of the number of neighboring bombs. If no bombs are adjacent,
+the cell is empty. If the cell contains a bomb, the game is over. If the user
+uncovers all cells, the user wins!
 
-Here are examples of these three situations:
+We will build up our programs in two parts.
 
-* link:logs/a5-userwin.html[User wins]
-* link:logs/a5-aiwins.html[AI wins]
-* link:logs/a5-tie.html[Tie]
+:secnums:
+== Board
 
-== 3x3 Board
+Write a program, `Board.java`, that generates and displays a NxM minesweeper board.
+The user should specify the following parameters as _command line arguments_.
 
-In order to implement tic-tac-toe we will be using a **list of characters** to represent
-the board. The board will begin as a list of 9 empty spaces:
+* the number of rows (integer)
+* the number of cols (integer)
+* the probability that a cell contains a bomb (double in range [0,1))
+
+[source,subs="quotes"]
+----
+$ **javac Board.java**
+$ **java Board 5 8 0.1**
+0 0 2 X 3 2 X 1
+0 0 2 X X 2 2 2
+0 1 2 3 3 2 2 X
+0 1 X 1 1 X 2 1
+0 1 1 1 1 1 1 0
+
+$ **java Board 5 8 0.9**
+X X X X X X X 3
+X X X X X X X X
+X X 8 X X X X X
+X X X X X X 7 X
+X X X X X 4 X X
+----
+
+Requirements/Hints:
+
+* You must use command-line arguments
+* You should use a 2D array to store the board. We recommend using a 2D array of integers, where each cell contains the count of neighboring bombs. If the cell contains a bomb, you can use a special value, such as -1, to denote it.
+* To decide whether a cell includes a bomb, use `Math.random` and test whether the value is less than the given probability.
+
+We recommend that you organize your code to use functions for generating and displaying the board. 
+You will re-use these functions in the next question.
 
 [source]
 ----
-char[] board = {' ',' ',' ',' ',' ',' ',' ',' ',' '};
+class Board {
+    public static void display(int[][] board) {
+        // todo: display board to console
+    }
+
+    public static int[][] generate(int rows, int cols, double prob) {
+        // todo: generate board with dimensions rows x cols 
+        // todo: fill board with prob chance of containing a bomb
+    }
+
+    public static void main(String[] args) {
+        // call generate and display
+    }
+}
 ----
 
-The board will be modified over the course of the game. 
-For debugging, use the Java function `Array.toString(board)`. 
-For example, suppose the AI chooses 3, we can print the board with:
+== Game
 
-[source]
-----
-board[3] = 'O';
-System.out.println(java.util.Arrays.toString(board));
-----
+Write a program, `Minesweeper.java`, that implements the game of minesweeper. Re-use your code from 
+the previous question. You should also re-use your validation functions from last week 
+to check for valid user input.
 
-The above code will print the following to the console:
+Below are several examples showing how the game should play:
 
-[source]
-----
-[' ',' ',' ','O',' ',' ',' ',' ',' ']
-----
+* link:logs/minesweeper-output1.txt[User wins]
+* link:logs/minesweeper-output2.txt[User loses]
 
-And then if the user plays 7 and we print, the board will look like:
+Your output doesn't need to look exactly the same but it should be clean and easy to read.
 
-[source]
-----
-[' ',' ',' ','O',' ',' ',' ','X',' ']
-----
+*Your program should use command line arguments!*
 
-
-== Main Function
+=== Main Function
 
 Your `main()` function should use the functions below to do the bulk of the work.  
   The general outline of the program is as follows:
 
 . Print out a welcome message. You can do this in main, or define a function for it.
-. Set up initial variables before entering the game loop. You will need at least the board and a way to keep track of whether someone has won yet.
-. Set up your game loop. Each time through the loop, either the user will play, or the AI will play. The board will be *modified* during each turn. If one of the players has won, the loop should exit. 
-. Print the output of the game, such as "AI won!", "You won!", "A tie!" 
+. Set up initial variables before entering the game loop. You will need at least two boards: one with the generated bombs and one that keeps track of which cells the user has uncovered already. 
+. Set up your game loop (hint: use a while loop). Each time through the loop, the program will ask for a cell to uncover and update the board. 
+. Print the output of the game. If the user selects a cell with the bomb, they lose. If the user uncovers all non-bomb cells, they win.
 
-== AI turn
+=== Design
 
+Think about how to subdivide the features of the game into functions. Each function should implement a 
+single, well-defined task. For example, we don't recommend you put your entire game loop into a function!
+But we do recommend that you use functions to help abstract sub-tasks, for example,
 
-Implement a function, `aiTurn`. This function should place an `O` at a random
-open spot on the board. `aiTurn` should be called from `main` during the game
-loop. 
+* to validate input 
+* to check whether the user has uncovered all non-bomb cells
+* to display the current state of the board
+* printing text with banners 
 
-You implementation should have this specification:
-
-[source]
-----
-// Function: aiTurn
-// Implements one turn of the AI player. 
-//   Default behavior: chooses a random open spot
-// Input board (char[]): the 3x3 tic-tac-toe board 
-// Returns (int): the index of the board that is modified
-public static int aiTurn(char[] board)
-----
-
-This function takes in a **list of characters** and determines where the AI
-should place an 'O'. The cells are numbered 0-8,
-inclusive. The choice cannot be a cell that is already taken by a symbol. 
-
-You can choose whether to have the function modify the board (the change will persist 
-after the function returns because arrays are *mutable*) or to modify the 
-board after the function returns to `main`, using the returned integer. 
-
-You are welcome to make an "intelligent" AI, but the recommended approach is
-to make the computer choose a cell randomly. A simple approach is to continually 
-choose random cells until it finds a free one.
-
-After the AI's turn, `main` should print the AI's choice
-
-```
-AI chooses: 7
-```
-
-== Player turn
-
-Implement a function, `userTurn`, that implements the player's turn. This function should 
-check that the user enters a valid integer. 
-
-. The integer is between 0 and 8, inclusive.
-. The cell is not already taken by a symbol.
-
-Keep asking the user to choose an integer until they choose a valid cell. For example,
-if there were already a symbol in the 5 cell, the player turn might look like this:
-
-[source,subs=quotes]
-----
-Enter 0-8 for your choice: **5**
-Invalid input: 5
-Enter 0-8 for your choice: **10**
-Invalid input: 10
-Enter 0-8 for your choice: **-3**
-Invalid input: -3
-Enter 0-8 for your choice: **0**
-----
-
-`playerTurn` should implement the following specification
-
-[source]
-----
-// Function: playerTurn
-// Asks the user which cell they want to place their `X`. 
-//    Ensures the player chooses a valid index.
-// Input board (char[]): the 3x3 tic-tac-toe board
-// Returns (int): the index chosen by the player 
-public static int playerTurn(char[] board)
-----
-
-You can choose whether to have the function modify the board (the change will persist 
-after the function returns because arrays are *mutable*) or to modify the 
-board after the function returns in `main`, using the returned integer. 
-
-== Display the board
-
-Implement a function, `displayBoard`, that prints the current board to the screen.
-Below is the specification
-
-[source]
-----
-// Function: displayBoard
-// Displays the tic-tac-toe board as a 3x3 grid 
-// Input board (char[]): the tic-tac-toe board
-// Returns: none
-public static void displayBoard(char[] board)
-----
-
-Board is an array with 9 characters. You need to print it as a 3x3 square grid.
-One approach is the use a for loop that progresses in threes, for example, see 
-what happens when you try this code
-
-[source]
-----
-for (int i = 0; i < 9; i += 3) {
-  System.out.printf("%d|%d|%d\n", i, i+1, i+2);
-}
-----
-
-== Check for wins
-
-Implement a function, `isWinner` which tests whether either the AI or player wins.
-Below is the specification
-
-[source]
-----
-Function: isWinner
-Returns true if the given symbol controls a complete row, col, or diagonal; False otherwise
-Input board (char[]): the 3x3 tic-tac-toe board
-Input sym (char): the character, either 'O' or 'X'
-Return (boolean): true if the sym has won the board; false otherwise
-----
-
-Note that we can detect that a tie has ocurred if no turns are left and no one won the 
-game.
-
-For example, calling isWinner with the following board and `'X'` returns false but with `'O'`
-returns true
-
-[source]
-----
--------
-|O|X|X|
-|O|O|O|
-|X|X|O|
--------
-----
+NOTE: You can define a 2D array of booleans to keep track of which cells the user has selected already.
 
 = Extra challenge
 
 Implement your own unique minesweeper game in `MyMinesweeper.java`. Be sure to point out to us 
-your work in your readme. Below are ideas
+your original ideas and features in your readme. Below are ideas
 
 * Use StdDraw to display the board with graphics
 * If the user selects an empty square, uncover all adjacent cells until you reach a non-empty cells.
